sample_manifest (38).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'topologyviewer-development-dev1'
  namespace: 'topologyviewer-dev'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'topologyviewer-ui'
    branch: 'development'
    commit: '717861f'
    role: java
    environment: dev1
spec:
  rules:
    - host: topologyviewer-ui-dev1.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'topologyviewer-development-dev1'
              servicePort: 8080
  tls:
    - hosts:
      - 'topologyviewer-ui-dev1.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'topologyviewer-development-dev1'
  namespace: 'topologyviewer-dev'
  labels:
    project: 'topologyviewer-ui'
    branch: 'development'
    commit: '717861f'
    role: java
    environment: dev1
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'topologyviewer-ui'
    branch: 'development'
    commit: '717861f'
    role: java
    environment: dev1
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'topologyviewer-development-dev1'
  labels:
    project: 'topologyviewer-ui'
    branch: 'development'
    commit: '717861f'
    role: java
    environment: dev1
spec:
  selector:
    matchLabels:
      project: 'topologyviewer-ui'
      branch: 'development'
      role: java
      environment: dev1
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'topologyviewer-ui'
        branch: 'development'
        commit: '717861f'
        role: java
        environment: dev1
    spec:
      containers:
        - name: topologyviewer-ui-dev1
          image: 'nexusprod.corp.intranet:4567/topologyviewer/topologyviewer/topologyviewer-ui:dev1_20220407'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 8Gi
            requests:
              memory: 6000Mi
      imagePullSecrets:
        - name: topologyviewer-ui-pr-null
---
---
